Opened 11 years ago
Closed 11 years ago
#4090 closed defect (fixed)
Could not find the codec parameters for the video stream of a TS file
| Reported by: | Underground78 | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | avformat |
| Version: | git-master | Keywords: | mpegts regression |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
Summary of the bug: FFmpeg cannot detect the codec parameters for the video stream of this TS sample.
How to reproduce:
% ffmpeg.exe -analyzeduration 1G -probesize 1G -i sample.ts
ffmpeg version N-67397-g8176638 Copyright (c) 2000-2014 the FFmpeg developers
built on Nov 6 2014 02:29:35 with gcc 4.9.1 (GCC)
configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-avisynth --enable-bzlib --enable-fontconfig --enable-frei0r --enable-gnutls --enable-iconv --enable-libass --enable-libbluray --enable-libbs2b --enable-libcaca --enable-libfreetype --enable-libgme --enable-libgsm --enable-libilbc --enable-libmodplug --enable-libmp3lame --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-libopenjpeg --enable-libopus --enable-librtmp --enable-libschroedinger --enable-libsoxr --enable-libspeex --enable-libtheora --enable-libtwolame --enable-libvidstab --enable-libvo-aacenc --enable-libvo-amrwbenc --enable-libvorbis --enable-libvpx --enable-libwavpack --enable-libwebp --enable-libx264 --enable-libx265 --enable-libxavs --enable-libxvid --enable-zlib
libavutil 54. 11.100 / 54. 11.100
libavcodec 56. 10.102 / 56. 10.102
libavformat 56. 12.101 / 56. 12.101
libavdevice 56. 2.100 / 56. 2.100
libavfilter 5. 2.103 / 5. 2.103
libswscale 3. 1.101 / 3. 1.101
libswresample 1. 1.100 / 1. 1.100
libpostproc 53. 3.100 / 53. 3.100
[NULL @ 04b0f3e0] start time for stream 2 is not set in estimate_timings_from_pts
[mpegts @ 04b19100] PES packet size mismatch
Last message repeated 1 times
[mpegts @ 04b19100] Could not find codec parameters for stream 3 (Video: mpeg2video ([2][0][0][0] / 0x0002), none): unspecified size
Consider increasing the value for the 'analyzeduration' and 'probesize' options
Input #0, mpegts, from 'F:\sample.ts':
Duration: 00:00:28.57, start: 3399.223411, bitrate: 4941 kb/s
Program 1
Stream #0:0[0x44](eng): Audio: mp2 ([3][0][0][0] / 0x0003), 48000 Hz, stereo, s16p, 192 kb/s
Stream #0:1[0x45](fra): Audio: mp3 ([3][0][0][0] / 0x0003), 48000 Hz, stereo, s16p, 192 kb/s
Stream #0:2[0x46](fra): Subtitle: dvb_subtitle ([6][0][0][0] / 0x0006)
Stream #0:3[0x47]: Video: mpeg2video ([2][0][0][0] / 0x0002), none, 90k tbn
Stream #0:4[0x48](fra): Subtitle: dvb_subtitle ([6][0][0][0] / 0x0006)
At least one output file must be specified
Change History (2)
comment:1 by , 11 years ago
| Component: | undetermined → avformat |
|---|---|
| Keywords: | mpegts regression added |
| Priority: | normal → important |
| Reproduced by developer: | set |
| Status: | new → open |
comment:2 by , 11 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |
Note:
See TracTickets
for help on using tickets.



Regression since 6eda91ad - related to tickets #3348 and #3762